# ADOL-OP3-TRAINING

test_manager/: CMakeLists.txt  package.xml
test_manager/launch/: op3_gazebo.launch
test_manager/src/: test_manager.cpp
test_manager2/: CMakeLists.txt  package.xml
test_manager2/launch/: op3_manager.launch
test_manager2/src/: test_manager.cpp
test_manager3/: CMakeLists.txt  package.xml
test_manager3/data/: ini_pose.yaml
test_manager3/launch/: op3_gazebo.launch  op3_manager.launch
test_manager3/src/: test_manager3.cpp
test_module/: CMakeLists.txt  package.xml
test_module/include/test_module/: test_module.h
test_module/src/: test_module.cpp
test_module2/: CMakeLists.txt  package.xml
test_module2/include/test_module2/: test_module2.h
test_module2/src/: test_module2.cpp
test_module3/: CMakeLists.txt  package.xml
test_module3/include/test_module3/: test_module3.h
test_module3/src/: test_module3.cpp
